🐛 Fix notes responsive behaviour on mobile

--- a/assets/sass/components/_text-styles.sass
+++ b/assets/sass/components/_text-styles.sass
@@ -57,13 +57,9 @@ body
   padding-bottom: 3px
 
   font-family: bluu-suuperstar-black
-  font-size: 32px
-  line-height: 44px
+  font-size: 40px
+  line-height: 52px
   letter-spacing: -1px
-
-  +adapt($bkp-desktop-sd)
-    font-size: 40px
-    line-height: 52px
 
   +adapt($bkp-desktop-hd)
     font-size: 48px
